--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
+        "php": ">=5.6.4",
         "ext-pcre": "*",
         "illuminate/database": "5.4.*|5.5.*|5.6.*",
         "illuminate/events": "5.4.*|5.5.*|5.6.*",
         "illuminate/routing": "5.4.*|5.5.*|5.6.*",
-        "symfony/http-foundation": "~4.0"
+        "symfony/http-foundation": "~3.2|~3.3|~4.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-master"
